2005-05-13  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc4					***
	*******************************************************************

2005-05-11  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/amd.c (main) : fixed memory leak detected by valgrind

	* amd/info_ldap.c (amu_ldap_init) : fixed memory leak detected by
	valgrind

2005-05-11  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/{check_checkmount_style.m4, check_mnttab_style.m4,
	check_nfs_fh_dref.m4, check_nfs_prot_headers.m4,
	check_nfs_sa_dref.m4, check_umount_style.m4, os_cflags.m4}: check
	for "macosx" as valid OS string, so we compile properly on Darwin
	systems.

	*******************************************************************
	*** Released am-utils-6.1-rc3					***
	*******************************************************************

	* rerun bootstrap to get a working configure script that actually
	checks for limits.h and dependent linux autofs/nfs headers.

	* configure.in: remove redundant check for limits.h.

2005-05-09  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc2					***
	*******************************************************************

2005-05-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amfs_generic.c (amfs_lookup_mntfs): removed redundant use of
	old_def_opts variable.

2005-05-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/amfs_generic.c (amfs_lookup_mntfs) : Make sure when a map
	entry has a single dash '-', that the default options are reset.
	This functionality was somehow lost from earlier releases and
	reported by Dan Riley <dsr@mail.lns.cornell.edu>.

2005-05-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess.long: detect SuSE Enterprise Server and call it
	"sles" not "suse".

2005-05-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (amd): document proper use of