@@ -1,3 +1,14 @@
+2005-05-16  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* amd/nfs_subr.c: use [1] for out-of-band pointer at the end of
+	struct am_fh, because it's the most portable method.  Bug fix
+	suggestion from Dan Riley <dsr at mail.lns.cornell.edu>.
+
+	* amd/amfs_generic.c (amfs_lookup_mntfs): reset currently used
+	def_opts to options given in -opts, appended with the /default
+	options.  Bug fix suggestion from Dan Riley <dsr at
+	mail.lns.cornell.edu>.
+
 2005-05-13  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	*******************************************************************
